i solved problem in my code

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
             <div>
                 <label id="name-label" for="name">Name</label><input id="name" name="name" required
                     placeholder=" inter youe name" type="text" />
-                <label id=" email-label" for="email">Email</label><input id="email" name="email"
+                <label id="email-label" for="email">Email</label><input id="email" name="email"
                     placeholder=" inter youe email" required type="email" />
-                    <label id="number-label" for="number">Number</label>
-                    <input id="number" name="number" type="number"   max="14" min="9" placeholder="Enter your number" />
                     
-            </div>
+                    <label id="number-label" for="number">Input your age (years): <input id="number" placeholder=">Input your age"  type="number" name="age" min="13" max="120" /></label>            </div>
             <div>
                 <label for="dropdown">What is your highest level of scientific education?
                     <select name="education" id="dropdown">
