i edite some text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </label>
             </div>
             <div>
-                <p>Rephrased question: Which field of development do you want to pursue in the future ?</p>
+                <p>Which field of development do you want to pursue in the future ?</p>
                 <label for="full-stack"><input class="inline" name="theSelect" id="full-stack" value="full-stack"
                         type="radio">full-stack</label>
                 <label for="front-end"><input class="inline" name="theSelect" id="front-end" value="front-end"
